--- a/src/com/svachallan/ui/Launcher.form
+++ b/src/com/svachallan/ui/Launcher.form
@@ -43,6 +43,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/images/theme.jpg"/>
         </Property>
+        <Property name="opaque" type="boolean" value="true"/>
       </Properties>
     </Component>
   </SubComponents>
